bk_ida/gccida/c1/record_value_for_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11624:6: error: use of undeclared identifier 'v15'
rtx *v15; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11625:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v16; // rdx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11628:6: error: use of undeclared identifier 'v19'
rtx *v19; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11629:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx *v20; // r8 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11619:5: note: 'v10' declared here
int v10; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11629:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'int')
rtx *v20; // r8 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11631:4: error: expected ';' after expression
rtx v22; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11631:5: error: use of undeclared identifier 'v22'; did you mean 'v21'?
rtx v22; // rbx 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11630:9: note: 'v21' declared here
__int64 v21; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11639:4: error: expected ';' after expression
rtx v30; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11639:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rbp 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11619:5: note: 'v10' declared here
int v10; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11643:4: error: expected ';' after expression
rtx x; // [rsp+8h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11643:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+8h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11644:4: error: expected ';' after expression
rtx v35; // [rsp+10h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11644:5: error: use of undeclared identifier 'v35'
rtx v35; // [rsp+10h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11646:1: error: use of undeclared identifier 'x'
x = value; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11657:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = ( ( unsigned int)( mode_class_0[v7] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11687:1: error: use of undeclared identifier 'x'
x = replace_rtx( v14, reg, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11690:1: error: use of undeclared identifier 'v35'
v35 = reg; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11693:1: error: use of undeclared identifier 'v15'
v15 = &reg_last_set_value[rtuint]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/combine.c:11697:1: error: use of undeclared identifier 'v19'
v19 = &reg_last_death[rtuint]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/record_value_for_reg/src/obj/combine.o] Error 1
